option('jpeg',   type : 'boolean', value : true,  description: 'Enable JPEG support')
option('png',    type : 'boolean', value : true,  description: 'Enable PNG support')
option('bmp',    type : 'boolean', value : true,  description: 'Enable BMP support')
option('psd',    type : 'boolean', value : false, description: 'Enable PSD support')
option('tga',    type : 'boolean', value : false, description: 'Enable TGA support')
option('gif',    type : 'boolean', value : false, description: 'Enable GIF support')
option('hdr',    type : 'boolean', value : false, description: 'Enable HDR support')
option('imgpic', type : 'boolean', value : false, description: 'Enable PIC image format support')
option('pnm',    type : 'boolean', value : false, description: 'Enable PNM/PPM/PGM support')
